# g2rtest

./: .gitignore  README.md  go.mod
cmd/demo/: main.go
g2r/: g2r.go
gh/rust2go/: .gitignore  Cargo.toml
gh/rust2go/mem-ring/: Cargo.toml  deque.go  eventfd.go  go.mod  go.sum  queue.go
gh/rust2go/mem-ring/src/: eventfd.rs  lib.rs  queue.rs
proto/: g2r.proto
rustlib/: Cargo.toml
rustlib/include/: g2r.h
rustlib/src/: lib.rs
