[package]
name = "g2r"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "g2r"
crate-type = ["staticlib"]

[dependencies]
mem-ring = { path = "../gh/rust2go/mem-ring", default-features = false, features = ["tokio"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "net"] }
