[workspace]
members = [
    "mem-ring",
]
resolver = "2"

[workspace.package]
authors = ["ihciah <ihciah@gmail.com>"]
categories = ["development-tools::ffi", "external-ffi-bindings"]
description = "Async Calling Between Go and Rust with FFI."
edition = "2021"
keywords = ["ffi", "golang", "go", "async"]
license = "MIT/Apache-2.0"
repository = "https://github.com/ihciah/rust2go"

[workspace.dependencies]
monoio = { version = "0.2.4" }